refactor(backend): modernize Boot 4 warnings and deprecation hotspots
Clean up IDE-reported warnings across backend config, services, and tests
while preserving existing behavior and green builds.

- remove explicit commons-lang3 version so Spring Boot dependency
  management owns it
- drop deprecated Spring nullability annotations from WebMvcConfigurer
  overrides and align method signatures
- refactor ActuatorHealthIndicator optional dependency wiring to avoid
  deprecated annotations and update related tests
- migrate calendar parsing away from deprecated ical4j accessors/types
  to newer temporal-based APIs
- replace deprecated URL(String) usage with URI.create(...).toURL() in
  DSBMobile and DSBMobileTest
- remove unnecessary deprecation suppressions and modernize legacy switch
  syntax to rule-switch style
- address test hints/warnings (unused wiring fields and generic varargs)

Also document School-Dashboard specific adaptations in DSBMobile header
comments to clearly separate upstream MIT-origin code from local
maintenance changes.